# material-color-utilities

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheels.yml  pip.yaml  quality-checks.yaml  quality_checks.yaml
docs/: api.md
src/: main.cc
src/cpp/cam/: hct.cc  hct.h  hct_solver.cc  viewing_conditions.h
src/cpp/dynamiccolor/: dynamic_color.cc  dynamic_color.h  dynamic_scheme.cc  dynamic_scheme.h  material_dynamic_colors.cc  variant.cc  variant.h
src/cpp/palettes/: tones.cc  tones.h
src/cpp/pybindings/: bindings.cc  bindings.h  representations.cc  representations.h
src/cpp/score/: score.h
src/cpp/temperature/: temperature_cache.h
src/cpp/utils/: color_utils.cc  color_utils.h  hex_utils.cc  hex_utils.h  image_utils.cc  image_utils.h  theme_utils.cc  theme_utils.h  util_types.cc  util_types.h  utils.cc  utils.h
src/material_color_utilities/: __init__.py  _core.py  image_utils.py
src/ruurd_colors/: __init__.py  _core.pyi  image_utils.py  prepare_image.py
tests/: test_colors.py
